test/files/neg/t12226.check
t12226.scala:6: warning: Implicit resolves to enclosing class Elvis
  implicit class Elvis[A](alt: => A) { def ?:(a: A): A = if (a ne null) a else alt } // warn
                                                             ^
t12226.scala:9: warning: Implicit resolves to enclosing method f
  implicit def f[A](a: A): String = if (a ne null) a else "nope" // warn
                                        ^
t12226.scala:9: warning: Implicit resolves to enclosing method f
  implicit def f[A](a: A): String = if (a ne null) a else "nope" // warn
                                                   ^
t12226.scala:21: warning: Implicit resolves to enclosing class StringOps
    def normal: String = s.crazy.crazy // warn
                         ^
error: No warnings can be incurred under -Werror.
4 warnings
1 error
